Do not merge archive on file system